css/styles.css
/* License ---------- */

/*
   MIT License

   Copyright (c) [2018] [Kai David Kovacik]

   Permission is hereby granted, free of charge, to any person obtaining a copy
   of this software and associated documentation files (the "Software"), to deal
   in the Software without restriction, including without limitation the rights
   to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
   copies of the Software, and to permit persons to whom the Software is
   furnished to do so, subject to the following conditions:

   The above copyright notice and this permission notice shall be included in all
   copies or substantial portions of the Software.

   THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
   IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
   FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
   AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
   LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
   OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
   SOFTWARE.
*/

/* Browser Reset ---------- */

/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

/* Reference ---------- */

/*
   accent-color: #93d8d7;
   base-color: #3f3f3f;
   depressed-base-color: #303030;
   raised-base-color: #5b5b5b;
*/

/* Type Selectors ---------- */

html,
body {
    overflow-x: hidden;
}

body {
	/*font-family: 'Helvetica', Sans-Serif;*/
	/*font-family: 'Cormorant', serif;*/
	/*font-family: 'Concert One', cursive;*/
	/*font-family: 'Arvo', serif;*/
	/*font-family: 'Lato', sans-serif;*/
	/*font: 1em/1.5 'Ubuntu', sans-serif;*/				/*all*/
	/*font-family: 'PT Sans', sans-serif;*/
	/*font-family: 'Fira Sans', sans-serif;*/
	/*font-family: 'Nunito', sans-serif;*/				/*all*/
	/*font-family: 'Indie Flower', cursive;*/

	/*font-family: 'Bowlby One SC', cursive;*/
	/*font-family: 'Cabin', sans-serif;*/				/*all*/
	/*font-family: 'Cinzel', serif;*/
	/*font-family: 'Monoton', cursive;*/				/*title*/
	font: 1em/1.5 'Hammersmith One', sans-serif; 		/*all
	/*font-family: 'Press Start 2P', cursive;*/			/*title*/
	/*font-family: 'Bungee Inline', cursive;*/
	/*font-family: 'Limelight', cursive;*/
	/*font-family: 'Allerta Stencil', sans-serif;*/
	margin: auto;
}

h1,
h2 {
	text-align: center;
}

h1 {
	font-size: 5em;
	text-shadow: 0px 3px 3px rgba(0, 0, 0, 0.3);
}

h2 {
	font-size: 3em;
	text-shadow: 0px 3px 3px rgba(0, 0, 0, 0.3);
}

/* Class Selectors ---------- */

.nav-bar {
	overflow: hidden;
	background-color: #3f3f3f;
	box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.3);
	position: fixed;
	top: 0;
	width: 100%;
}

.nav-button {
	display: inline-block;
	color: lightgrey;
	text-align: center;
	text-decoration: none;
	text-shadow: 0px 2px 2px black;
	padding: 14px 16px;
	float: right;
	transition: 0.05s;
	border-bottom: 1px solid #3f3f3f;
}
.nav-button:hover {
	background: radial-gradient(#5b5b5b, #3f3f3f 70%);
	color: white;
	box-shadow: 0px 2px 2px -1px black;
	border-color: #93d8d7;
}
.nav-button:active {
	background: none;
	box-shadow: inset 0px 2px 2px black;
	background-color: #303030;
}

.main-header {
	background: #93d8d7 url('../images/goldengate2.jpg') no-repeat center;
	background-size: cover;
	background-attachment: fixed;
	height: 800px;
	padding: 100px 0;
	text-align: center;
	color: white;
	text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.8);
}

.title {
	margin: 20px;
	text-transform: capitalize;
  	text-shadow: 0 1px 0 #ccc,
               	 0 2px 0 #c9c9c9,
               	 0 3px 0 #bbb,
               	 0 4px 0 #b9b9b9,
               	 0 5px 0 #aaa,
               	 0 6px 1px rgba(0,0,0,.1),
               	 0 0 5px rgba(0,0,0,.1),
               	 0 1px 3px rgba(0,0,0,.3),
               	 0 3px 5px rgba(0,0,0,.2),
               	 0 5px 10px rgba(0,0,0,.25),
               	 0 10px 10px rgba(0,0,0,.2),
               	 0 20px 20px rgba(0,0,0,.15);
}

.portrait {
	width: 25%;
	border-radius: 50%;
	box-shadow: 0 5px 5px rgba(0, 0, 0, 0.7);
	margin-bottom: 80px;
}

.tiles {
	list-style: none;
	overflow: auto;
	padding: 50px;
	margin: 0;
}

.card {
	float: left;
	background-color: #eee; 
	border-radius: 5px;
	padding: 20px;
	margin: 10px;
	box-shadow: 0 5px 5px -2px rgba(0, 0, 0, 0.7);
	transition: 0.2s;
	color: black;
	text-shadow: 0px 2px 2px darkgrey;
	text-align: center;
}
.card:hover {
	box-shadow: 0 15px 15px -5px rgba(0, 0, 0, 0.7);
	transform: scale(1.2);
}

.card img {
	width: 4em;
}

.title-strip {
	padding: 360px 0;
	color: white;
	box-shadow: inset 0 10px 10px -5px rgba(0, 0, 0, 0.6);
}

.content {
	padding: 10% 25%;
	background: linear-gradient(#525252, #3f3f3f);
	color: white;
}

/* ID Selectors ---------- */

#logo {
	color: #93d8d7;
	font-weight: bold;
	padding: 14px 16px;
	margin: 0;
	text-shadow: 0 2px 2px black;
	float: left;
}

#about .title-strip {
	background: #93d8d7 url('../images/skyline.jpg') no-repeat center;
	background-size: cover;
	background-attachment: fixed;
}

#skills .title-strip {
	background: #93d8d7 url('../images/mountains.jpg') no-repeat center;
	background-size: cover;
	background-attachment: fixed;
}
#skills .content {
	padding: 5% 12.5%;
}

#projects .title-strip {
	background: #93d8d7 url('../images/tofino.jpg') no-repeat center;
	background-size: cover;
	background-attachment: fixed;
}

/* Media Queries ---------- */

@media (max-width: 1024px) {
	.content {
		padding: 5% 5%;
	}

	.portrait {
		width: 50%;
	}

	.nav-button:hover {
		background: none;
		background-color: #3f3f3f;
		box-shadow: 0 0 0 0 transparent;
		color: lightgrey;
		border-color: #3f3f3f
	}
	.nav-button:active {
		color: white;
		box-shadow: 0px 2px 2px -1px black;
		border-color: #93d8d7;
		box-shadow: inset 0px 2px 2px black;
		background-color: #303030;
	}
}

@media (max-width: 560px) {
	.nav-button {
		padding: 14px 8px;
		font-size: 0.85em;
	}

	.title {
		margin-top: 25%;
		font-size: 4em;
	}

	.portrait {
		width: 90%;
	}
}

@media (max-width: 430px) {
	.nav-bar {
		display: none;
	}
}

